--- a/toy_analysis.ipynb
+++ b/toy_analysis.ipynb
@@ -219,6 +219,187 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>provider</th>\n",
+       "      <th>problem_id</th>\n",
+       "      <th>problem</th>\n",
+       "      <th>solution</th>\n",
+       "      <th>prefix</th>\n",
+       "      <th>completion</th>\n",
+       "      <th>candidate_solution</th>\n",
+       "      <th>verified</th>\n",
+       "      <th>correction_detected</th>\n",
+       "      <th>error</th>\n",
+       "      <th>status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>deepseek/deepseek-chat</td>\n",
+       "      <td>Hyperbolic</td>\n",
+       "      <td>0</td>\n",
+       "      <td>What's 5/4 + 2?</td>\n",
+       "      <td>Let me solve this step by step:\\n1. 5/4 = 1.25...</td>\n",
+       "      <td>5/4 is 1, so</td>\n",
+       "      <td>5/4 + 2 = 1 + 2 = 3</td>\n",
+       "      <td>5/4 is 1, so 5/4 + 2 = 1 + 2 = 3</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>deepseek/deepseek-chat</td>\n",
+       "      <td>Hyperbolic</td>\n",
+       "      <td>1</td>\n",
+       "      <td>If a train travels 120 miles in 2 hours, what'...</td>\n",
+       "      <td>Let me solve this step by step:\\n1. Speed = Di...</td>\n",
+       "      <td>Let me divide 2 by 120, so</td>\n",
+       "      <td>To find the speed of the train in miles per ho...</td>\n",
+       "      <td>Let me divide 2 by 120, so To find the speed o...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>deepseek/deepseek-chat</td>\n",
+       "      <td>Hyperbolic</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Sally has 3 times as many marbles as Tom. If T...</td>\n",
+       "      <td>Let me solve this step by step:\\n1. Tom has 12...</td>\n",
+       "      <td>If Tom has 12 marbles, Sally has 3 marbles, so</td>\n",
+       "      <td>Sally has 3 * 12 = 36 marbles.\\n\\nTogether, th...</td>\n",
+       "      <td>If Tom has 12 marbles, Sally has 3 marbles, so...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>deepseek/deepseek-chat</td>\n",
+       "      <td>Hyperbolic</td>\n",
+       "      <td>3</td>\n",
+       "      <td>What's 2 + 3 × 4?</td>\n",
+       "      <td>Let me solve this step by step:\\n1. Following ...</td>\n",
+       "      <td>First I'll add 2 and 3 to get 5, then</td>\n",
+       "      <td>It looks like you started to solve the problem...</td>\n",
+       "      <td>First I'll add 2 and 3 to get 5, then It looks...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>deepseek/deepseek-chat</td>\n",
+       "      <td>Hyperbolic</td>\n",
+       "      <td>4</td>\n",
+       "      <td>A rectangle has a width of 4 inches and a leng...</td>\n",
+       "      <td>Let me solve this step by step:\\n1. Width = 4 ...</td>\n",
+       "      <td>If the width is 4 inches, then the length is 4...</td>\n",
+       "      <td>You're right! The length of the rectangle is t...</td>\n",
+       "      <td>If the width is 4 inches, then the length is 4...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    model    provider  problem_id  \\\n",
+       "0  deepseek/deepseek-chat  Hyperbolic           0   \n",
+       "1  deepseek/deepseek-chat  Hyperbolic           1   \n",
+       "2  deepseek/deepseek-chat  Hyperbolic           2   \n",
+       "3  deepseek/deepseek-chat  Hyperbolic           3   \n",
+       "4  deepseek/deepseek-chat  Hyperbolic           4   \n",
+       "\n",
+       "                                             problem  \\\n",
+       "0                                    What's 5/4 + 2?   \n",
+       "1  If a train travels 120 miles in 2 hours, what'...   \n",
+       "2  Sally has 3 times as many marbles as Tom. If T...   \n",
+       "3                                  What's 2 + 3 × 4?   \n",
+       "4  A rectangle has a width of 4 inches and a leng...   \n",
+       "\n",
+       "                                            solution  \\\n",
+       "0  Let me solve this step by step:\\n1. 5/4 = 1.25...   \n",
+       "1  Let me solve this step by step:\\n1. Speed = Di...   \n",
+       "2  Let me solve this step by step:\\n1. Tom has 12...   \n",
+       "3  Let me solve this step by step:\\n1. Following ...   \n",
+       "4  Let me solve this step by step:\\n1. Width = 4 ...   \n",
+       "\n",
+       "                                              prefix  \\\n",
+       "0                                       5/4 is 1, so   \n",
+       "1                         Let me divide 2 by 120, so   \n",
+       "2     If Tom has 12 marbles, Sally has 3 marbles, so   \n",
+       "3              First I'll add 2 and 3 to get 5, then   \n",
+       "4  If the width is 4 inches, then the length is 4...   \n",
+       "\n",
+       "                                          completion  \\\n",
+       "0                                5/4 + 2 = 1 + 2 = 3   \n",
+       "1  To find the speed of the train in miles per ho...   \n",
+       "2  Sally has 3 * 12 = 36 marbles.\\n\\nTogether, th...   \n",
+       "3  It looks like you started to solve the problem...   \n",
+       "4  You're right! The length of the rectangle is t...   \n",
+       "\n",
+       "                                  candidate_solution verified  \\\n",
+       "0                   5/4 is 1, so 5/4 + 2 = 1 + 2 = 3    False   \n",
+       "1  Let me divide 2 by 120, so To find the speed o...     True   \n",
+       "2  If Tom has 12 marbles, Sally has 3 marbles, so...     True   \n",
+       "3  First I'll add 2 and 3 to get 5, then It looks...    False   \n",
+       "4  If the width is 4 inches, then the length is 4...     True   \n",
+       "\n",
+       "  correction_detected error status  \n",
+       "0               False   NaN    NaN  \n",
+       "1                True   NaN    NaN  \n",
+       "2                True   NaN    NaN  \n",
+       "3                True   NaN    NaN  \n",
+       "4                True   NaN    NaN  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds_df = pd.read_csv(\"toy_evaluate_deepseek.csv\")\n",
+    "ds_df.head()"
+   ]
   }
  ],
  "metadata": {
