--- a/toy_analysis.ipynb
+++ b/toy_analysis.ipynb
@@ -222,9 +222,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of records with 'ERROR PLACEHOLDER' as verified value: 0\n",
+      "Number of records with 'ERROR PLACEHOLDER' as correction_detected value: 0\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -256,97 +278,85 @@
        "      <th>candidate_solution</th>\n",
        "      <th>verified</th>\n",
        "      <th>correction_detected</th>\n",
-       "      <th>error</th>\n",
-       "      <th>status</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>deepseek/deepseek-chat</td>\n",
-       "      <td>Hyperbolic</td>\n",
+       "      <td>qwen/qwen-2.5-72b-instruct</td>\n",
+       "      <td>DeepInfra</td>\n",
        "      <td>0</td>\n",
        "      <td>What's 5/4 + 2?</td>\n",
        "      <td>Let me solve this step by step:\\n1. 5/4 = 1.25...</td>\n",
        "      <td>5/4 is 1, so</td>\n",
-       "      <td>5/4 + 2 = 1 + 2 = 3</td>\n",
-       "      <td>5/4 is 1, so 5/4 + 2 = 1 + 2 = 3</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>the problem can be rewritten as 1 + 2, which ...</td>\n",
+       "      <td>5/4 is 1, so  the problem can be rewritten as ...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>deepseek/deepseek-chat</td>\n",
-       "      <td>Hyperbolic</td>\n",
+       "      <td>qwen/qwen-2.5-72b-instruct</td>\n",
+       "      <td>DeepInfra</td>\n",
        "      <td>1</td>\n",
        "      <td>If a train travels 120 miles in 2 hours, what'...</td>\n",
        "      <td>Let me solve this step by step:\\n1. Speed = Di...</td>\n",
        "      <td>Let me divide 2 by 120, so</td>\n",
-       "      <td>To find the speed of the train in miles per ho...</td>\n",
-       "      <td>Let me divide 2 by 120, so To find the speed o...</td>\n",
+       "      <td>the speed of the train is 0.0167 miles per ho...</td>\n",
+       "      <td>Let me divide 2 by 120, so  the speed of the t...</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>deepseek/deepseek-chat</td>\n",
-       "      <td>Hyperbolic</td>\n",
+       "      <td>qwen/qwen-2.5-72b-instruct</td>\n",
+       "      <td>DeepInfra</td>\n",
        "      <td>2</td>\n",
        "      <td>Sally has 3 times as many marbles as Tom. If T...</td>\n",
        "      <td>Let me solve this step by step:\\n1. Tom has 12...</td>\n",
        "      <td>If Tom has 12 marbles, Sally has 3 marbles, so</td>\n",
-       "      <td>Sally has 3 * 12 = 36 marbles.\\n\\nTogether, th...</td>\n",
+       "      <td>Sally has 3 * 12 = 36 marbles. \\n\\nTo find ou...</td>\n",
        "      <td>If Tom has 12 marbles, Sally has 3 marbles, so...</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>deepseek/deepseek-chat</td>\n",
-       "      <td>Hyperbolic</td>\n",
+       "      <td>qwen/qwen-2.5-72b-instruct</td>\n",
+       "      <td>DeepInfra</td>\n",
        "      <td>3</td>\n",
        "      <td>What's 2 + 3 × 4?</td>\n",
        "      <td>Let me solve this step by step:\\n1. Following ...</td>\n",
        "      <td>First I'll add 2 and 3 to get 5, then</td>\n",
-       "      <td>It looks like you started to solve the problem...</td>\n",
-       "      <td>First I'll add 2 and 3 to get 5, then It looks...</td>\n",
-       "      <td>False</td>\n",
+       "      <td>I'll multiply 5 by 4 to get 20. However, this...</td>\n",
+       "      <td>First I'll add 2 and 3 to get 5, then  I'll mu...</td>\n",
        "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>deepseek/deepseek-chat</td>\n",
-       "      <td>Hyperbolic</td>\n",
+       "      <td>qwen/qwen-2.5-72b-instruct</td>\n",
+       "      <td>DeepInfra</td>\n",
        "      <td>4</td>\n",
        "      <td>A rectangle has a width of 4 inches and a leng...</td>\n",
        "      <td>Let me solve this step by step:\\n1. Width = 4 ...</td>\n",
        "      <td>If the width is 4 inches, then the length is 4...</td>\n",
-       "      <td>You're right! The length of the rectangle is t...</td>\n",
+       "      <td>we multiply the length by the width. \\n\\nArea...</td>\n",
        "      <td>If the width is 4 inches, then the length is 4...</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    model    provider  problem_id  \\\n",
-       "0  deepseek/deepseek-chat  Hyperbolic           0   \n",
-       "1  deepseek/deepseek-chat  Hyperbolic           1   \n",
-       "2  deepseek/deepseek-chat  Hyperbolic           2   \n",
-       "3  deepseek/deepseek-chat  Hyperbolic           3   \n",
-       "4  deepseek/deepseek-chat  Hyperbolic           4   \n",
+       "                        model   provider  problem_id  \\\n",
+       "0  qwen/qwen-2.5-72b-instruct  DeepInfra           0   \n",
+       "1  qwen/qwen-2.5-72b-instruct  DeepInfra           1   \n",
+       "2  qwen/qwen-2.5-72b-instruct  DeepInfra           2   \n",
+       "3  qwen/qwen-2.5-72b-instruct  DeepInfra           3   \n",
+       "4  qwen/qwen-2.5-72b-instruct  DeepInfra           4   \n",
        "\n",
        "                                             problem  \\\n",
        "0                                    What's 5/4 + 2?   \n",
@@ -370,35 +380,46 @@
        "4  If the width is 4 inches, then the length is 4...   \n",
        "\n",
        "                                          completion  \\\n",
-       "0                                5/4 + 2 = 1 + 2 = 3   \n",
-       "1  To find the speed of the train in miles per ho...   \n",
-       "2  Sally has 3 * 12 = 36 marbles.\\n\\nTogether, th...   \n",
-       "3  It looks like you started to solve the problem...   \n",
-       "4  You're right! The length of the rectangle is t...   \n",
+       "0   the problem can be rewritten as 1 + 2, which ...   \n",
+       "1   the speed of the train is 0.0167 miles per ho...   \n",
+       "2   Sally has 3 * 12 = 36 marbles. \\n\\nTo find ou...   \n",
+       "3   I'll multiply 5 by 4 to get 20. However, this...   \n",
+       "4   we multiply the length by the width. \\n\\nArea...   \n",
        "\n",
-       "                                  candidate_solution verified  \\\n",
-       "0                   5/4 is 1, so 5/4 + 2 = 1 + 2 = 3    False   \n",
-       "1  Let me divide 2 by 120, so To find the speed o...     True   \n",
-       "2  If Tom has 12 marbles, Sally has 3 marbles, so...     True   \n",
-       "3  First I'll add 2 and 3 to get 5, then It looks...    False   \n",
-       "4  If the width is 4 inches, then the length is 4...     True   \n",
+       "                                  candidate_solution  verified  \\\n",
+       "0  5/4 is 1, so  the problem can be rewritten as ...      True   \n",
+       "1  Let me divide 2 by 120, so  the speed of the t...      True   \n",
+       "2  If Tom has 12 marbles, Sally has 3 marbles, so...      True   \n",
+       "3  First I'll add 2 and 3 to get 5, then  I'll mu...      True   \n",
+       "4  If the width is 4 inches, then the length is 4...      True   \n",
        "\n",
-       "  correction_detected error status  \n",
-       "0               False   NaN    NaN  \n",
-       "1                True   NaN    NaN  \n",
-       "2                True   NaN    NaN  \n",
-       "3                True   NaN    NaN  \n",
-       "4                True   NaN    NaN  "
+       "   correction_detected  \n",
+       "0                 True  \n",
+       "1                 True  \n",
+       "2                 True  \n",
+       "3                 True  \n",
+       "4                 True  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ds_df = pd.read_csv(\"toy_evaluate_deepseek.csv\")\n",
-    "ds_df.head()"
+    "df = pd.read_csv(\"toy_evaluate.csv\")\n",
+    "# df[\"verified\"].unique()\n",
+    "# df[\"correction_detected\"].unique()\n",
+    "error_count = len(df[df[\"verified\"] == \"ERROR PLACEHOLDER\"])\n",
+    "print(f\"Number of records with 'ERROR PLACEHOLDER' as verified value: {error_count}\")\n",
+    "error_count = len(df[df[\"correction_detected\"] == \"ERROR PLACEHOLDER\"])\n",
+    "print(f\"Number of records with 'ERROR PLACEHOLDER' as correction_detected value: {error_count}\")\n",
+    "\n",
+    "# Replace ERROR PLACEHOLDER with False for verified column\n",
+    "\n",
+    "\n",
+    "\n",
+    "df.head()"
    ]
   }
  ],
