--- a/toy_analysis.ipynb
+++ b/toy_analysis.ipynb
@@ -236,17 +236,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of records with 'ERROR PLACEHOLDER' as verified value: 0\n",
-      "Number of records with 'ERROR PLACEHOLDER' as correction_detected value: 0\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -401,25 +393,176 @@
        "4                 True  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv(\"toy_evaluate.csv\")\n",
-    "# df[\"verified\"].unique()\n",
-    "# df[\"correction_detected\"].unique()\n",
-    "error_count = len(df[df[\"verified\"] == \"ERROR PLACEHOLDER\"])\n",
-    "print(f\"Number of records with 'ERROR PLACEHOLDER' as verified value: {error_count}\")\n",
-    "error_count = len(df[df[\"correction_detected\"] == \"ERROR PLACEHOLDER\"])\n",
-    "print(f\"Number of records with 'ERROR PLACEHOLDER' as correction_detected value: {error_count}\")\n",
-    "\n",
-    "# Replace ERROR PLACEHOLDER with False for verified column\n",
-    "\n",
-    "\n",
-    "\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>provider</th>\n",
+       "      <th>problem_id</th>\n",
+       "      <th>problem</th>\n",
+       "      <th>solution</th>\n",
+       "      <th>prefix</th>\n",
+       "      <th>completion</th>\n",
+       "      <th>candidate_solution</th>\n",
+       "      <th>verified</th>\n",
+       "      <th>correction_detected</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>microsoft/phi-3-medium-128k-instruct</td>\n",
+       "      <td>Azure</td>\n",
+       "      <td>0</td>\n",
+       "      <td>What's 5/4 + 2?</td>\n",
+       "      <td>Let me solve this step by step:\\n1. 5/4 = 1.25...</td>\n",
+       "      <td>5/4 is 1, so</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5/4 is 1, so</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>microsoft/phi-3-medium-128k-instruct</td>\n",
+       "      <td>Azure</td>\n",
+       "      <td>1</td>\n",
+       "      <td>If a train travels 120 miles in 2 hours, what'...</td>\n",
+       "      <td>Let me solve this step by step:\\n1. Speed = Di...</td>\n",
+       "      <td>Let me divide 2 by 120, so</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Let me divide 2 by 120, so</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>microsoft/phi-3-medium-128k-instruct</td>\n",
+       "      <td>Azure</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Sally has 3 times as many marbles as Tom. If T...</td>\n",
+       "      <td>Let me solve this step by step:\\n1. Tom has 12...</td>\n",
+       "      <td>If Tom has 12 marbles, Sally has 3 marbles, so</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>If Tom has 12 marbles, Sally has 3 marbles, so</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>microsoft/phi-3-medium-128k-instruct</td>\n",
+       "      <td>Azure</td>\n",
+       "      <td>3</td>\n",
+       "      <td>What's 2 + 3 × 4?</td>\n",
+       "      <td>Let me solve this step by step:\\n1. Following ...</td>\n",
+       "      <td>First I'll add 2 and 3 to get 5, then</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>First I'll add 2 and 3 to get 5, then</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>microsoft/phi-3-medium-128k-instruct</td>\n",
+       "      <td>Azure</td>\n",
+       "      <td>4</td>\n",
+       "      <td>A rectangle has a width of 4 inches and a leng...</td>\n",
+       "      <td>Let me solve this step by step:\\n1. Width = 4 ...</td>\n",
+       "      <td>If the width is 4 inches, then the length is 4...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>If the width is 4 inches, then the length is 4...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    model provider  problem_id  \\\n",
+       "195  microsoft/phi-3-medium-128k-instruct    Azure           0   \n",
+       "196  microsoft/phi-3-medium-128k-instruct    Azure           1   \n",
+       "197  microsoft/phi-3-medium-128k-instruct    Azure           2   \n",
+       "198  microsoft/phi-3-medium-128k-instruct    Azure           3   \n",
+       "199  microsoft/phi-3-medium-128k-instruct    Azure           4   \n",
+       "\n",
+       "                                               problem  \\\n",
+       "195                                    What's 5/4 + 2?   \n",
+       "196  If a train travels 120 miles in 2 hours, what'...   \n",
+       "197  Sally has 3 times as many marbles as Tom. If T...   \n",
+       "198                                  What's 2 + 3 × 4?   \n",
+       "199  A rectangle has a width of 4 inches and a leng...   \n",
+       "\n",
+       "                                              solution  \\\n",
+       "195  Let me solve this step by step:\\n1. 5/4 = 1.25...   \n",
+       "196  Let me solve this step by step:\\n1. Speed = Di...   \n",
+       "197  Let me solve this step by step:\\n1. Tom has 12...   \n",
+       "198  Let me solve this step by step:\\n1. Following ...   \n",
+       "199  Let me solve this step by step:\\n1. Width = 4 ...   \n",
+       "\n",
+       "                                                prefix completion  \\\n",
+       "195                                       5/4 is 1, so        NaN   \n",
+       "196                         Let me divide 2 by 120, so        NaN   \n",
+       "197     If Tom has 12 marbles, Sally has 3 marbles, so        NaN   \n",
+       "198              First I'll add 2 and 3 to get 5, then        NaN   \n",
+       "199  If the width is 4 inches, then the length is 4...        NaN   \n",
+       "\n",
+       "                                    candidate_solution  verified  \\\n",
+       "195                                      5/4 is 1, so      False   \n",
+       "196                        Let me divide 2 by 120, so      False   \n",
+       "197    If Tom has 12 marbles, Sally has 3 marbles, so      False   \n",
+       "198             First I'll add 2 and 3 to get 5, then      False   \n",
+       "199  If the width is 4 inches, then the length is 4...     False   \n",
+       "\n",
+       "     correction_detected  \n",
+       "195                 True  \n",
+       "196                 True  \n",
+       "197                 True  \n",
+       "198                 True  \n",
+       "199                False  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phi_df = df[df[\"model\"] == \"microsoft/phi-3-medium-128k-instruct\"]\n",
+    "phi_df.head()"
    ]
   }
  ],
