progress on gsm8k

--- a/toy/toy_analysis.ipynb
+++ b/toy/toy_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,8 +57,8 @@
        "      <td>What's 5/4 + 2?</td>\n",
        "      <td>Let me solve this step by step:\\n1. 5/4 = 1.25...</td>\n",
        "      <td>5/4 is 1, so</td>\n",
-       "      <td>the equation becomes 1 + 2, which equals 3. H...</td>\n",
-       "      <td>5/4 is 1, so  the equation becomes 1 + 2, whic...</td>\n",
+       "      <td>the problem can be rewritten as 1 + 2, which ...</td>\n",
+       "      <td>5/4 is 1, so  the problem can be rewritten as ...</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
@@ -70,8 +70,8 @@
        "      <td>If a train travels 120 miles in 2 hours, what'...</td>\n",
        "      <td>Let me solve this step by step:\\n1. Speed = Di...</td>\n",
        "      <td>Let me divide 2 by 120, so</td>\n",
-       "      <td>the answer is 60 miles per hour. \\n\\nCorrecti...</td>\n",
-       "      <td>Let me divide 2 by 120, so  the answer is 60 m...</td>\n",
+       "      <td>the speed of the train is 0.0167 miles per ho...</td>\n",
+       "      <td>Let me divide 2 by 120, so  the speed of the t...</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
@@ -83,35 +83,35 @@
        "      <td>Sally has 3 times as many marbles as Tom. If T...</td>\n",
        "      <td>Let me solve this step by step:\\n1. Tom has 12...</td>\n",
        "      <td>If Tom has 12 marbles, Sally has 3 marbles, so</td>\n",
-       "      <td>the total number of marbles Sally has is 3 * ...</td>\n",
+       "      <td>Sally has 3 * 12 = 36 marbles. \\n\\nTo find ou...</td>\n",
        "      <td>If Tom has 12 marbles, Sally has 3 marbles, so...</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>google/gemma-2-27b-it</td>\n",
+       "      <td>qwen/qwen-2.5-72b-instruct</td>\n",
        "      <td>DeepInfra</td>\n",
-       "      <td>0</td>\n",
-       "      <td>What's 5/4 + 2?</td>\n",
-       "      <td>Let me solve this step by step:\\n1. 5/4 = 1.25...</td>\n",
-       "      <td>5/4 is 1, so</td>\n",
-       "      <td>1 + 2 = 3.\\n\\nHere's how to solve it:\\n\\n* **...</td>\n",
-       "      <td>5/4 is 1, so  1 + 2 = 3.\\n\\nHere's how to solv...</td>\n",
-       "      <td>False</td>\n",
+       "      <td>3</td>\n",
+       "      <td>What's 2 + 3 × 4?</td>\n",
+       "      <td>Let me solve this step by step:\\n1. Following ...</td>\n",
+       "      <td>First I'll add 2 and 3 to get 5, then</td>\n",
+       "      <td>I'll multiply 5 by 4 to get 20. However, this...</td>\n",
+       "      <td>First I'll add 2 and 3 to get 5, then  I'll mu...</td>\n",
+       "      <td>True</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>google/gemma-2-27b-it</td>\n",
+       "      <td>qwen/qwen-2.5-72b-instruct</td>\n",
        "      <td>DeepInfra</td>\n",
-       "      <td>1</td>\n",
-       "      <td>If a train travels 120 miles in 2 hours, what'...</td>\n",
-       "      <td>Let me solve this step by step:\\n1. Speed = Di...</td>\n",
-       "      <td>Let me divide 2 by 120, so</td>\n",
-       "      <td>the answer is 60 miles per hour.</td>\n",
-       "      <td>Let me divide 2 by 120, so  the answer is 60 m...</td>\n",
-       "      <td>False</td>\n",
+       "      <td>4</td>\n",
+       "      <td>A rectangle has a width of 4 inches and a leng...</td>\n",
+       "      <td>Let me solve this step by step:\\n1. Width = 4 ...</td>\n",
+       "      <td>If the width is 4 inches, then the length is 4...</td>\n",
+       "      <td>we multiply the length by the width. \\n\\nArea...</td>\n",
+       "      <td>If the width is 4 inches, then the length is 4...</td>\n",
+       "      <td>True</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -123,43 +123,43 @@
        "0  qwen/qwen-2.5-72b-instruct  DeepInfra           0   \n",
        "1  qwen/qwen-2.5-72b-instruct  DeepInfra           1   \n",
        "2  qwen/qwen-2.5-72b-instruct  DeepInfra           2   \n",
-       "3       google/gemma-2-27b-it  DeepInfra           0   \n",
-       "4       google/gemma-2-27b-it  DeepInfra           1   \n",
+       "3  qwen/qwen-2.5-72b-instruct  DeepInfra           3   \n",
+       "4  qwen/qwen-2.5-72b-instruct  DeepInfra           4   \n",
        "\n",
        "                                             problem  \\\n",
        "0                                    What's 5/4 + 2?   \n",
        "1  If a train travels 120 miles in 2 hours, what'...   \n",
        "2  Sally has 3 times as many marbles as Tom. If T...   \n",
-       "3                                    What's 5/4 + 2?   \n",
-       "4  If a train travels 120 miles in 2 hours, what'...   \n",
+       "3                                  What's 2 + 3 × 4?   \n",
+       "4  A rectangle has a width of 4 inches and a leng...   \n",
        "\n",
        "                                            solution  \\\n",
        "0  Let me solve this step by step:\\n1. 5/4 = 1.25...   \n",
        "1  Let me solve this step by step:\\n1. Speed = Di...   \n",
        "2  Let me solve this step by step:\\n1. Tom has 12...   \n",
-       "3  Let me solve this step by step:\\n1. 5/4 = 1.25...   \n",
-       "4  Let me solve this step by step:\\n1. Speed = Di...   \n",
+       "3  Let me solve this step by step:\\n1. Following ...   \n",
+       "4  Let me solve this step by step:\\n1. Width = 4 ...   \n",
        "\n",
-       "                                           prefix  \\\n",
-       "0                                    5/4 is 1, so   \n",
-       "1                      Let me divide 2 by 120, so   \n",
-       "2  If Tom has 12 marbles, Sally has 3 marbles, so   \n",
-       "3                                    5/4 is 1, so   \n",
-       "4                      Let me divide 2 by 120, so   \n",
+       "                                              prefix  \\\n",
+       "0                                       5/4 is 1, so   \n",
+       "1                         Let me divide 2 by 120, so   \n",
+       "2     If Tom has 12 marbles, Sally has 3 marbles, so   \n",
+       "3              First I'll add 2 and 3 to get 5, then   \n",
+       "4  If the width is 4 inches, then the length is 4...   \n",
        "\n",
        "                                          completion  \\\n",
-       "0   the equation becomes 1 + 2, which equals 3. H...   \n",
-       "1   the answer is 60 miles per hour. \\n\\nCorrecti...   \n",
-       "2   the total number of marbles Sally has is 3 * ...   \n",
-       "3   1 + 2 = 3.\\n\\nHere's how to solve it:\\n\\n* **...   \n",
-       "4                   the answer is 60 miles per hour.   \n",
+       "0   the problem can be rewritten as 1 + 2, which ...   \n",
+       "1   the speed of the train is 0.0167 miles per ho...   \n",
+       "2   Sally has 3 * 12 = 36 marbles. \\n\\nTo find ou...   \n",
+       "3   I'll multiply 5 by 4 to get 20. However, this...   \n",
+       "4   we multiply the length by the width. \\n\\nArea...   \n",
        "\n",
        "                                  candidate_solution  verified  \\\n",
-       "0  5/4 is 1, so  the equation becomes 1 + 2, whic...      True   \n",
-       "1  Let me divide 2 by 120, so  the answer is 60 m...      True   \n",
+       "0  5/4 is 1, so  the problem can be rewritten as ...      True   \n",
+       "1  Let me divide 2 by 120, so  the speed of the t...      True   \n",
        "2  If Tom has 12 marbles, Sally has 3 marbles, so...      True   \n",
-       "3  5/4 is 1, so  1 + 2 = 3.\\n\\nHere's how to solv...     False   \n",
-       "4  Let me divide 2 by 120, so  the answer is 60 m...     False   \n",
+       "3  First I'll add 2 and 3 to get 5, then  I'll mu...      True   \n",
+       "4  If the width is 4 inches, then the length is 4...      True   \n",
        "\n",
        "   correction_detected  \n",
        "0                 True  \n",
@@ -169,7 +169,7 @@
        "4                 True  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
